--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.12.1",
     "@typescript-eslint/parser": "5.12.1",
+    "ansi-regex": "6.0.1",
     "autoprefixer": "10.4.2",
     "chai": "4.3.6",
     "clean-webpack-plugin": "4.0.0",
@@ -57,19 +58,18 @@
     "file-loader": "6.2.0",
     "handlebars-loader": "1.7.1",
     "html-webpack-plugin": "5.5.0",
-    "husky": "^7.0.4",
+    "husky": "7.0.4",
     "jsdom": "19.0.0",
     "mini-css-extract-plugin": "2.6.0",
     "mocha": "9.2.2",
     "node-sass": "7.0.1",
     "npm-run-all": "4.1.5",
-    "parcel": "2.3.2",
+    "parcel": "2.4.0",
     "parcel-transformer-hbs": "1.0.4",
     "postcss-import": "14.0.2",
     "postcss-lit": "0.4.3",
     "postcss-loader": "6.2.1",
     "postcss-sass": "0.5.0",
-    "precss": "4.0.0",
     "prettier": "2.5.1",
     "rimraf": "3.0.2",
     "sass": "1.49.7",
@@ -92,7 +92,6 @@
     "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
     "express": "4.17.2",
     "handlebars": "4.7.7",
-    "parcel-plugin-handlebars": "0.4.4",
     "postcss": "8.4.6",
     "uuid": "8.3.2"
   }
